--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,20 +1,39 @@
+:root {
+  --light-icon-color: #171c43;
+  --dark-icon-color: #fff;
+}
+
+.dark .anticon {
+  color: var(--dark-icon-color);
+}
+
+.light .anticon {
+  color: var(--light-icon-color);
+}
+
 .tram-list-container {
-    padding: 60px;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  padding: 60px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 
 .tram-list-container.dark {
-    background-color: #000;
+  background-color: #000;
 }
 
 .tram-list-container.light {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .header-center {
-    text-align: center;
-    margin-bottom: 0 !important;
+  text-align: center;
+  margin-bottom: 0 !important;
+}
+
+.toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
